--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: ruby
 
 rvm:
-  - 2.2.5
   - 2.3.1
-  - ruby-head
+
+script:
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate
+  - bundle exec rspec spec
+
+services:
+  - postgresql
+
+addons:
+  postgresql: "9.4"
