--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -5,6 +5,20 @@ languages:
 engines:
   markdownlint:
     enabled: true
+  brakeman:
+    enabled: true
+  bundler-audit:
+    enabled: true
+  csslint:
+    enabled: true
+  duplication:
+    enabled: true
+  eslint:
+    enabled: true
+  fixme:
+    enabled: true
+  rubocop:
+    enabled: true
 
 exclude_paths:
   - "log/"
