--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -13,6 +13,10 @@ engines:
     enabled: true
   duplication:
     enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
   eslint:
     enabled: true
   fixme:
