--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
 script:
   - bundle exec rake db:create
   - bundle exec rake db:migrate
-  - bundle exec rspec spec
+  - CODECLIMATE_REPO_TOKEN=981eb9d81e6c62c5bd09240ee6f082f247dc129f29b9a0f66f15476c7d6a5fb3 bundle exec rspec spec
 
 services:
   - postgresql
@@ -14,7 +14,5 @@ services:
 
 addons:
   postgresql: "9.4"
-
-addons:
   code_climate:
     repo_token: 981eb9d81e6c62c5bd09240ee6f082f247dc129f29b9a0f66f15476c7d6a5fb3
